--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,11 +33,11 @@ p {
     height: 30px;
     width: auto;
 }
-header > #header-left {
+#header-left {
     display: flex;
     justify-content: left;
 }
-header > #header-right {
+#header-right {
     display: flex;
     justify-content: right;
 }
