--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,12 @@
 body {
     background-color: var(--white);
 }
+h2 {
+    color: var(--header-black);
+    font-family: Verdana;
+    font-size: 21px;
+    font-weight: normal;
+}
 header {
     display: block flex;
     justify-content: center;
@@ -29,14 +35,26 @@ p {
     font-size: 14px;
 }
 :root {
+    --dark-grey: #747474;
+    --header-black: #212121;
+    --light-grey: #adadad;
     --orange: #f68721;
     --white: #fcfcfc;
 }
 
 /* || UTILITIES - Rules that flexibly apply to many elements */
+.complete {
+    text-decoration: line-through;
+}
+.dark-grey {
+    color: var(--dark-grey);
+}
 .left {
     margin-left: 0%;
     margin-right: auto;
+}
+.light-grey {
+    color: var(--light-grey);
 }
 .invis-btn {
     background: transparent;
