--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,7 +15,8 @@ h2 {
     color: var(--header-black);
     font-family: Verdana;
     font-size: 21px;
-    font-weight: normal;
+    font-weight: 100;
+    margin: 10px 0px 8px;
 }
 header {
     display: block flex;
@@ -101,4 +102,10 @@ p {
 #new-proj-btn-sxn {
     display: flex;
     align-items: center;
+}
+.project {
+    display: block flex;
+}
+.project-info > p {
+    margin-top: 8px;
 }
