--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,14 +21,14 @@ h2 {
 header {
     display: block flex;
     justify-content: center;
-    margin: 0px 0px 50px 0px;
+    margin: 0px 0px 30px 0px;
     padding: 50px 0px 0px 0px;
     width: 100%;
 }
 main {
     display: block flex;
     justify-content: center;
-    margin: 50px 0px 10px 0px;
+    margin: 0px;
     width: 100%;
 }
 p {
@@ -73,6 +73,9 @@ p {
 }
 
 /* || SPECIFIC - Rules for all other components, context-specific styles, children, etc. */
+#doit-info > p {
+    margin: 8px 0px 0px;
+}
 #doit-logo {
     height: 30px;
     width: auto;
@@ -108,4 +111,8 @@ p {
 }
 .project-info > p {
     margin-top: 8px;
+}
+#projects-window {
+    padding: 24px;
+    width: 100%;
 }
