--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,14 +21,13 @@ h2 {
 header {
     display: block flex;
     justify-content: center;
-    margin: 0px 0px 30px 0px;
-    padding: 50px 0px 0px 0px;
+    margin: 50px 0px 30px 0px;
     width: 100%;
 }
 main {
     display: block flex;
     justify-content: center;
-    margin: 0px;
+    margin: 24px 0px;
     width: 100%;
 }
 p {
@@ -120,6 +119,7 @@ p {
 }
 .project {
     display: block flex;
+    padding: 10px;
 }
 .project-info > .flex-inline {
     align-items: center;
@@ -133,6 +133,5 @@ p {
     margin: 0px 0px 0px 8px;
 }
 #projects-window {
-    padding: 24px;
     width: 100%;
 }
