--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -58,7 +58,6 @@ p {
     display: flex;
 }
 .left {
-    margin-left: 0%;
     margin-right: auto;
 }
 .light-grey {
@@ -71,7 +70,6 @@ p {
 }
 .right {
     margin-left: auto;
-    margin-right: 0%;
 }
 .sidebar {
     flex-shrink: 0;
@@ -118,6 +116,7 @@ p {
     align-items: center;
 }
 .project {
+    align-items: center;
     display: block flex;
     padding: 10px;
 }
