--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -117,6 +117,7 @@ p {
 }
 .project {
     align-items: center;
+    border-bottom: 1px solid var(--light-grey);
     display: block flex;
     padding: 10px;
 }
@@ -133,4 +134,7 @@ p {
 }
 #projects-window {
     width: 100%;
+}
+.show-tasks-btn {
+    margin-right: 30px;
 }
