Separated project closed styling into closed class, finished appearance of open project.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -50,6 +50,9 @@ p {
 .clickable:hover {
     cursor: pointer;
 }
+.closed {
+    border-bottom: 1px solid var(--light-grey);
+}
 .complete {
     text-decoration: line-through;
 }
@@ -119,7 +122,6 @@ p {
 }
 .project {
     align-items: center;
-    border-bottom: 1px solid var(--light-grey);
     display: block flex;
     padding: 10px;
 }
