--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,6 +6,12 @@
     height: 30px;
     width: auto;
 }
+header {
+    display: block flex;
+    justify-content: center;
+    margin: 50px 0px 30px 0px;
+    width: 100%;
+}
 #header-left {
     display: inherit;
     justify-content: left;
