--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -1,4 +1,13 @@
 /* TASK */
+.due-date {
+    display: block;
+    margin: 0px;
+}
+
+.due-date > p {
+    margin: 0px;
+}
+
 .menu-btn {
     margin-right: 30px;
 }
@@ -6,9 +15,16 @@
 .task-bar {
     align-items: center;
     display: block flex;
+    padding: 10px;
+}
+
+.task-content {
+    margin: 0px 0px 0px 10px;
+    padding: 0px;
 }
 
 .task-info {
     align-items: center;
     display: block flex;
+    margin: 0px 0px 8px 0px;
 }
