--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -1,11 +1,20 @@
 /* TASK */
 .due-date {
-    display: block;
+    align-items: center;
+    display: block flex;
     margin: 0px;
 }
 
-.due-date > p {
-    margin: 0px;
+.warning {
+    align-items: center;
+    background-color: var(--yellow);
+    border-radius: 30px;
+    display: flex;
+    height: 1em;
+    justify-content: center;
+    margin-left: 12px;
+    padding: 2px 8px;
+    width: fit-content;
 }
 
 .menu-btn {
