--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,6 +56,7 @@ p {
     border-bottom: 1px solid var(--light-grey);
 }
 .complete {
+    color: var(--light-grey);
     text-decoration: line-through;
 }
 .dark-grey {
